--- a/hr-config-server/pom.xml
+++ b/hr-config-server/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>gr-config-server</artifactId>
+	<artifactId>hr-config-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gr-config-server</name>
+	<name>hr-config-server</name>
 	<description>Config Serve</description>
 	<properties>
 		<java.version>11</java.version>
